# spevktator

./: .flake8  .gitignore  INSTALL.md  README.md  metadata.json  pyproject.toml
.github/workflows/: test.yml
data/: metadata.json  metadata.yml
data/plugins/: link_pks.py
data/templates/: _table-vk-posts.html
research/: Russian Coverage of the ZNPP.md
spevktator/: cli.py  natasha_entities.py  scraper.py  utils.py
tests/: test_spevktator.py  test_vkfeed.py  vk_life.html
vkfeed/: cli.py  dostoevsky_sentiment.py  scraper.py
