[tool.poetry]
name = "vkfeed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
# python = "^3.10"
python = ">=3.8,<3.12"
click = "^8.1.3"
parsel = "^1.6.0"
spacy = "^3.4.1"
sqlite-utils = "^3.28"
datasette = "^0.62"
scipy = "^1.9.0"
concise-concepts = "^0.5.4"
beautifulsoup4 = "^4.11.1"
dateparser = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-httpx = "^0.21.0"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"

[tool.poetry.scripts]
vkfeed = "vkfeed.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
