[tool.poetry]
name = "spevktator"
version = "0.1.0"
description = "An open source tool to monitor VK public community walls"
authors = ["Mischa Untaga"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"
parsel = "^1.6.0"
spacy = "^3.4.1"
sqlite-utils = "^3.28"
datasette = "^0.62"
scipy = "^1.9.0"
concise-concepts = "^0.5.4"
beautifulsoup4 = "^4.11.1"
dateparser = "^1.1.1"
dostoevsky = "^0.6.0"
tabulate = "^0.8.10"
datasette-vega = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-httpx = "^0.21.0"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"

[tool.poetry.scripts]
spevktator = "spevktator.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
