[tool.poetry]
name = "spevktator"
version = "0.1.0"
description = "An open source investigation tool to collect and analyse public VK community wall posts"
authors = ["Mischa Untaga", "Morsaki"]
readme = "README.md"
license = "Apache License, Version 2.0"
homepage = "https://spevktator.io/"
repository = "https://github.com/MischaU8/spevktator"
keywords = ["osint", "vk", "sqlite", "datasette"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"
sqlite-utils = "^3.28"
datasette = "^0.62"
beautifulsoup4 = "^4.11.1"
dateparser = "^1.1.1"
dostoevsky = "^0.6.0"
tabulate = "^0.8.10"
datasette-vega = "^0.6.2"
deepl = "^1.9.0"
datasette-block-robots = "^1.1"
datasette-gzip = "^0.2"
natasha = "^1.4.0"
datasette-template-sql = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-httpx = "^0.21.0"
black = "^22.6.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
freezegun = "^1.2.2"

[tool.poetry.scripts]
spevktator = "spevktator.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
